--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -386,7 +386,7 @@
               for="resume-document-filename"
               class="profile-form-upload-image-button btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.resume.upload.button' | translate}}</label>
           <p class="profile-form-upload-image-description">{{'user.profile.form.resume.upload.description' | translate}}</p>
-          <!--<div><i class="fa fa-file-text fa-5x"></i></div> Add when User.documents is exposed to frontend-->
+          <!--<div *ngIf="user.cv_document><i class="fa fa-file-text fa-5x"></i></div> Add when User.documents is exposed to frontend-->
           <div *ngIf="resumeDocumentStatusObject.documentSaveSuccess" class="profile-form-save-message">{{'user.profile.form.resume.upload.success' | translate}}</div>
           <div *ngIf="resumeDocumentStatusObject.documentSaveFail" class="profile-form-error-message">{{'user.profile.form.resume.upload.fail' | translate}}</div>
         </div>
