[WIP] Convert user-register.component to Material

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
 @import './app/styles/colors';
 @import './app/styles/dimensions';
 @import './app/styles/buttons';
